# fuse-framework

./: .buildinfo  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  conftest.py  console_script_setup.html  contributing.html  cookiecutter.json  genindex.html  index.html  objects.inv  prompts.html  pypi_release_checklist.html  pypi_setup.html  pyproject.toml  readme.html  search.html  searchindex.js  tox.ini  travis_pypi_setup.html  troubleshooting.html  tutorial.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gh-pages.yml  master-python-package.yml  python-package.yml
_sources/: console_script_setup.rst.txt  index.rst.txt  prompts.rst.txt  pypi_setup.rst.txt  troubleshooting.rst.txt  tutorial.rst.txt
_sources/_sources/: console_script_setup.rst.txt  index.rst.txt  troubleshooting.rst.txt  tutorial.rst.txt
configs/: settings.yaml
docs/: Makefile  conf.py  console_script_setup.rst  index.rst  prompts.rst  pypi_release_checklist.rst  pypi_setup.rst  troubleshooting.rst  tutorial.rst
doctrees/: console_script_setup.doctree  contributing.doctree  environment.pickle  index.doctree  prompts.doctree  pypi_release_checklist.doctree  pypi_setup.doctree  readme.doctree  travis_pypi_setup.doctree  troubleshooting.doctree  tutorial.doctree
fuse_framework/: __init__.py  config.py  logger.py  main.py
hooks/: post_gen_project.py  pre_gen_project.py
python_framework/: __init__.py  config.py  logger.py  main.py
tests/: test_bake_project.py
{{cookiecutter.project_slug.replace('_', '-')}}/: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  config.py  conftest.py  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug.replace('_', '-')}}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
{{cookiecutter.project_slug.replace('_', '-')}}/.github/workflows/: gh-pages.yml  master-python-package.yml  python-package.yml  upload-python-package.yml
{{cookiecutter.project_slug.replace('_', '-')}}/configs/: .secrets.yaml  settings.yaml
{{cookiecutter.project_slug.replace('_', '-')}}/docs/: .gitignore  conf.py  index.rst  installation.rst  pypi_release_checklist.rst
{{cookiecutter.project_slug.replace('_', '-')}}/tests/: test_cli.py  test_config.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug.replace('_', '-')}}/tests/dynaconf/: test_cli.py
{{cookiecutter.project_slug.replace('_', '-')}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py  config.py  logger.py
{{cookiecutter.project_slug.replace('_', '-')}}/{{cookiecutter.project_slug}}/dynaconf/: __init__.py  cli.py
{{cookiecutter.project_slug}}/: .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  index.rst  installation.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
