[tool.poetry]
name = "shanx-framework"
version = "0.1.6"
repository = "https://github.com/sp-95/python-framework"
documentation = "https://sp-95.github.io/python-framework"
description = "Python Framework"
authors = ["Shashanka Prajapati <shashankap95@gmail.com>"]
readme = "README.rst"
license = "BSD"
keywords = ["cookiecutter", "template", "package"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development",
]
packages = [
    { include = "python_framework" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
termcolor = "*"
fire = "*"
loguru = "*"
dynaconf = "*"
cookiecutter = "*"
toml = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
pytest = "*"
pytest-cookies = "*"
tox = "*"
sphinx-rtd-theme = "*"

[tool.poetry.scripts]
shanx-py = "python_framework.main:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sp-95/python-framework/issues"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[flake8]
max-line-length = 88
max-complexity = 10
show-source = true
extend-ignore = "E203, W503"
per-file-ignores = """
    # imported but unused
    __init__.py: F401
# """

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
